crates/panache-parser/tests/snapshots/yaml__yaml_suite_K3WX.snap
---
source: crates/panache-parser/tests/yaml.rs
assertion_line: 246
expression: snapshot
---
case_id: K3WX
input: "---\n{ \"foo\" # comment\n  :bar }\n"
has_error_contract: false
parsed_mapping_tree: true
diagnostics: []
