crates/panache-parser/tests/snapshots/yaml__yaml_suite_K4SU.snap
---
source: crates/panache-parser/tests/yaml.rs
expression: snapshot
---
case_id: K4SU
input: "- foo\n- bar\n- 42\n"
has_error_contract: false
parsed_mapping_tree: true
diagnostics: []
