crates/panache-parser/tests/snapshots/yaml__yaml_suite_K527.snap
---
source: crates/panache-parser/tests/yaml.rs
assertion_line: 246
expression: snapshot
---
case_id: K527
input: ">-\n  trimmed\n  \n \n\n  as\n  space\n"
has_error_contract: false
parsed_mapping_tree: true
diagnostics: []
