crates/panache-parser/tests/snapshots/yaml__yaml_suite_K54U.snap
---
source: crates/panache-parser/tests/yaml.rs
assertion_line: 245
expression: snapshot
---
case_id: K54U
input: "---\tscalar\n"
has_error_contract: false
parsed_mapping_tree: true
diagnostics: []
