crates/panache-parser/tests/snapshots/yaml__yaml_suite_K858.snap
---
source: crates/panache-parser/tests/yaml.rs
assertion_line: 245
expression: snapshot
---
case_id: K858
input: "strip: >-\n\nclip: >\n\nkeep: |+\n\n"
has_error_contract: false
parsed_mapping_tree: true
diagnostics: []
