crates/panache-parser/tests/snapshots/yaml__yaml_suite_KMK3.snap
---
source: crates/panache-parser/tests/yaml.rs
expression: snapshot
---
case_id: KMK3
input: "foo:\n  bar: 1\nbaz: 2\n"
has_error_contract: false
parsed_mapping_tree: true
diagnostics: []
