crates/panache-parser/tests/snapshots/yaml__yaml_suite_KS4U.snap
---
source: crates/panache-parser/tests/yaml.rs
assertion_line: 246
expression: snapshot
---
case_id: KS4U
input: "---\n[\nsequence item\n]\ninvalid item\n"
has_error_contract: true
parsed_mapping_tree: false
diagnostics: [YAML_PARSE_TRAILING_CONTENT_AFTER_FLOW_END:unexpected content after flow-collection close@22..34]
