crates/panache-parser/tests/snapshots/yaml__yaml_suite_KSS4.snap
---
source: crates/panache-parser/tests/yaml.rs
assertion_line: 245
expression: snapshot
---
case_id: KSS4
input: "--- \"quoted\nstring\"\n--- &node foo\n"
has_error_contract: false
parsed_mapping_tree: true
diagnostics: []
