crates/panache-parser/tests/snapshots/yaml__yaml_suite_L383.snap
---
source: crates/panache-parser/tests/yaml.rs
assertion_line: 245
expression: snapshot
---
case_id: L383
input: "--- foo  # comment\n--- foo  # comment\n"
has_error_contract: false
parsed_mapping_tree: true
diagnostics: []
