crates/panache-parser/tests/snapshots/yaml__yaml_suite_L94M.snap
---
source: crates/panache-parser/tests/yaml.rs
assertion_line: 245
expression: snapshot
---
case_id: L94M
input: "? !!str a\n: !!int 47\n? c\n: !!str d\n"
has_error_contract: false
parsed_mapping_tree: true
diagnostics: []
