crates/panache-parser/tests/snapshots/yaml__yaml_suite_LE5A.snap
---
source: crates/panache-parser/tests/yaml.rs
assertion_line: 245
expression: snapshot
---
case_id: LE5A
input: "- !!str \"a\"\n- 'b'\n- &anchor \"c\"\n- *anchor\n- !!str\n"
has_error_contract: false
parsed_mapping_tree: true
diagnostics: []
